--- a/package.json
+++ b/package.json
@@ -13,21 +13,21 @@
 		"connect-mongo": "^3.2.0",
 		"cookie-parser": "~1.4.3",
 		"csrf": "^3.0.6",
-		"csurf": "^1.9.0",
+		"csurf": "^1.2.2",
 		"debug": "~2.6.9",
-		"express": "~4.16.0",
-		"express-handlebars": "^3.0.0",
+		"express": "^4.21.2",
+		"express-handlebars": "^8.0.3",
 		"express-session": "^1.15.6",
-		"express-validator": "^5.1.1",
+		"express-validator": "^7.2.1",
 		"handlebars": "^4.7.7",
-		"hbs": "~4.0.1",
+		"hbs": "^4.2.0",
 		"http-errors": "~1.6.2",
 		"locus": "^2.0.1",
-		"mongoose": "^5.0.13",
+		"mongoose": "^8.13.2",
 		"morgan": "~1.9.0",
 		"multer": "^1.3.0",
-		"nodemon": "^1.17.3",
-		"passport": "^0.4.0",
+		"nodemon": "^3.1.10",
+		"passport": "^0.7.0",
 		"passport-local": "^1.0.0",
 		"stripe": "^5.8.0"
 	}
